Refactor i18n structure: removed deprecated message files and updated locale imports. Enhanced metadata generation in page.tsx to utilize translations for SEO optimization.

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -1,11 +1,8 @@
 {
-  "HomePage": {
-    "create": "خلق",
-    "t3": "تي 3",
-    "firstSteps": "الخطوات الأولى",
-    "firstStepsDesc": "فقط الأساسيات - كل ما تحتاج إلى معرفته لإعداد قاعدة البيانات والمصادقة.",
-    "docs": "توثيق",
-    "docsDesc": "تعرف على المزيد حول إنشاء تطبيق T3 والمكتبات التي يستخدمها وكيفية نشره."
+  "website": {
+    "name": "HorizonWing",
+    "title": "HorizonWing - حلول الأعمال المدعومة بالذكاء الاصطناعي والابتكار الرقمي",
+    "description": "قم بتحويل عملك مع حلول HorizonWing للذكاء الاصطناعي. قم بتبسيط العمليات وتعزيز الإنتاجية ودفع الابتكار من خلال تقنيتنا المتطورة."
   },
   "Navbar": {
     "home": "وطن",
@@ -13,7 +10,7 @@
     "menu": "قائمة"
   },
   "Footer": {
-    "description": "# 0 # هو قالب صفحة مقصودة حديث ومفتوح المصدر تم إنشاؤه باستخدام Next.js و Tailwind CSS ، مما يساعد المطورين على إنشاء مواقع ويب جميلة بشكل أسرع.",
+    "description": "HorizonWing هو قالب صفحة مقصودة حديث ومفتوح المصدر تم إنشاؤه باستخدام Next.js و Tailwind CSS ، مما يساعد المطورين على إنشاء مواقع ويب جميلة بشكل أسرع.",
     "product": "حاصل الضرب",
     "components": "مكونات",
     "templates": "قوالب",
@@ -49,7 +46,7 @@
   "Testimonial": {
     "title": "ماذا يقول المستخدمون عن HorizonWing",
     "description": "تعرف على رأي المطورين والمبدعين في نموذج الصفحة المقصودة.",
-    "quoteOne": "# 0 # منظم بشكل جيد بشكل لا يصدق. الكود نظيف والوثائق ممتازة.",
+    "quoteOne": "HorizonWing منظم بشكل جيد بشكل لا يصدق. الكود نظيف والوثائق ممتازة.",
     "authorOne": "أليكس تشين",
     "titleOne": "مطور الواجهة الأمامية",
     "quoteTwo": "دعم التدويل رائع. وفر لي ساعات من العمل على التوطين.",
@@ -78,7 +75,7 @@
     "questionThree": "كيف يعمل التدويل؟",
     "answerThree": "نحن نستخدم next-intl للتدويل ، مما يجعل من السهل إضافة لغات جديدة. ما عليك سوى إضافة ترجماتك إلى مجلد الرسائل.",
     "questionFour": "هل يمكنني استخدامه في المشاريع التجارية؟",
-    "answerFour": "مطلقا! # 0 # مفتوح المصدر ومجاني للاستخدام لكل من المشاريع الشخصية والتجارية.",
+    "answerFour": "مطلقا! HorizonWing مفتوح المصدر ومجاني للاستخدام لكل من المشاريع الشخصية والتجارية.",
     "questionFive": "هل أحتاج إلى خبرة في البرمجة؟",
     "answerFive": "المعرفة الأساسية ب React و Tailwind CSS مفيدة ، لكن وثائقنا تجعل الأمر سهلا حتى للمبتدئين."
   },
