--- a/i18n/locales/hi.json
+++ b/i18n/locales/hi.json
@@ -1,11 +1,8 @@
 {
-  "HomePage": {
-    "create": "बनाना",
-    "t3": "टी3",
-    "firstSteps": "पहला कदम",
-    "firstStepsDesc": "बस मूल बातें - अपना डेटाबेस और प्रमाणीकरण सेट करने के लिए आपको जो कुछ भी जानना आवश्यक है।",
-    "docs": "प्रलेखन",
-    "docsDesc": "क्रिएट टी3 ऐप, इसके द्वारा उपयोग की जाने वाली लाइब्रेरी और इसे परिनियोजित करने के तरीके के बारे में अधिक जानें।"
+  "website": {
+    "name": "HorizonWing",
+    "title": "HorizonWing - एआई-संचालित व्यवसाय समाधान और डिजिटल नवाचार",
+    "description": "HorizonWing के एआई समाधानों के साथ अपने व्यवसाय को बदलें। हमारी अत्याधुनिक तकनीक के साथ संचालन को सुव्यवस्थित करें, उत्पादकता बढ़ाएं और नवाचार को बढ़ावा दें।"
   },
   "Navbar": {
     "home": "घर",
@@ -47,7 +44,7 @@
     "GlobalizationSupportDesc": "वैश्विक पहुंच के लिए अंतर्निहित अंतर्राष्ट्रीयकरण"
   },
   "Testimonial": {
-    "title": "उपयोगकर्ता #0 के बारे में क्या कहते हैं#",
+    "title": "उपयोगकर्ता HorizonWing के बारे में क्या कहते हैं",
     "description": "देखें कि डेवलपर और क्रिएटर हमारे लैंडिंग पेज टेम्प्लेट के बारे में क्या सोचते हैं.",
     "quoteOne": "HorizonWing अविश्वसनीय रूप से अच्छी तरह से संरचित है। कोड साफ है और प्रलेखन उत्कृष्ट है।",
     "authorOne": "एलेक्स चेन",
