--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,11 +1,8 @@
 {
-  "HomePage": {
-    "create": "Создавать",
-    "t3": "Т3",
-    "firstSteps": "Первые шаги",
-    "firstStepsDesc": "Только основы - все, что вам нужно знать для настройки базы данных и аутентификации.",
-    "docs": "Документация",
-    "docsDesc": "Узнайте больше о Create T3 App, используемых библиотеках и способах его развертывания."
+  "website": {
+    "name": "HorizonWing",
+    "title": "HorizonWing - AI-powered бизнес-решения и цифровые инновации",
+    "description": "Трансформируйте свой бизнес с помощью AI-решений HorizonWing. Оптимизируйте операции, повысьте производительность и внедряйте инновации с нашими передовыми технологиями."
   },
   "Navbar": {
     "home": "Дом",
