--- a/i18n/locales/th.json
+++ b/i18n/locales/th.json
@@ -1,11 +1,8 @@
 {
-  "HomePage": {
-    "create": "สร้าง",
-    "t3": "ที 3",
-    "firstSteps": "ขั้นตอนแรก",
-    "firstStepsDesc": "แค่พื้นฐาน - ทุกสิ่งที่คุณจําเป็นต้องรู้เพื่อตั้งค่าฐานข้อมูลและการรับรองความถูกต้องของคุณ",
-    "docs": "เอกสาร",
-    "docsDesc": "เรียนรู้เพิ่มเติมเกี่ยวกับ Create T3 App ไลบรารีที่ใช้ และวิธีปรับใช้"
+  "website": {
+    "name": "HorizonWing",
+    "title": "HorizonWing - โซลูชันธุรกิจที่ขับเคลื่อนด้วย AI และนวัตกรรมดิจิทัล",
+    "description": "เปลี่ยนแปลงธุรกิจของคุณด้วยโซลูชัน AI ของ HorizonWing ปรับปรุงการดำเนินงาน เพิ่มประสิทธิภาพ และขับเคลื่อนวัตกรรมด้วยเทคโนโลยีล้ำสมัยของเรา"
   },
   "Navbar": {
     "home": "บ้าน",
