--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -1,11 +1,8 @@
 {
-  "HomePage": {
-    "create": "Schaffen",
-    "t3": "T3",
-    "firstSteps": "Erste Schritte",
-    "firstStepsDesc": "Nur die Grundlagen - Alles, was Sie wissen müssen, um Ihre Datenbank und Authentifizierung einzurichten.",
-    "docs": "Dokumentation",
-    "docsDesc": "Erfahren Sie mehr über Create T3 App, die verwendeten Bibliotheken und die Bereitstellung von Create."
+  "website": {
+    "name": "HorizonWing",
+    "title": "HorizonWing - KI-gestützte Geschäftslösungen & digitale Innovation",
+    "description": "Transformieren Sie Ihr Unternehmen mit den KI-Lösungen von HorizonWing. Optimieren Sie Abläufe, steigern Sie die Produktivität und treiben Sie Innovationen mit unserer hochmodernen Technologie voran."
   },
   "Navbar": {
     "home": "Heim",
@@ -47,7 +44,7 @@
     "GlobalizationSupportDesc": "Integrierte Internationalisierung für globale Reichweite"
   },
   "Testimonial": {
-    "title": "Was Benutzer über #0 sagen#",
+    "title": "Was Benutzer über HorizonWing sagen",
     "description": "Erfahren Sie, was Entwickler und Ersteller über unsere Landingpage-Vorlage denken.",
     "quoteOne": "HorizonWing ist unglaublich gut strukturiert. Der Code ist sauber und die Dokumentation ist ausgezeichnet.",
     "authorOne": "Alex Chen",
