Update Chinese localization: modified secondary action text in zh.json for clarity

--- a/i18n/locales/zh.json
+++ b/i18n/locales/zh.json
@@ -83,7 +83,7 @@
     "title": "立马开始构建你落地页",
     "description": "加入数千名正在使用HorizonWing创建现代响应式落地页的开发者。立即开始使用我们的开源模板。",
     "primaryAction": "免费开始使用",
-    "secondaryAction": "立即查看GitHub"
+    "secondaryAction": "查看GitHub"
   },
   "Pricing": {
     "title": "简单定价",
