Enhance README and Footer components with Uneed Embed Badge
- Added Uneed Embed Badge to both English and Chinese README files to promote the landing page.
- Updated Japanese and Korean translations for the Testimonial section by simplifying the title.
- Integrated Uneed Embed Badge into the Footer component for better visibility.

--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -44,7 +44,7 @@
     "GlobalizationSupportDesc": "グローバル展開のための組み込みの国際化"
   },
   "Testimonial": {
-    "title": "#0についてのユーザーの声#",
+    "title": "ユーザーの声",
     "description": "ランディングページテンプレートについて、開発者やクリエイターの意見をご覧ください。",
     "quoteOne": "HorizonWingは信じられないほどよく構成されています。コードはクリーンで、ドキュメントは優れています。",
     "authorOne": "アレックス・チェン",
