--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -44,7 +44,7 @@
     "GlobalizationSupportDesc": "글로벌 도달을 위한 기본 제공 국제화"
   },
   "Testimonial": {
-    "title": "#0에 대한 사용자 의견#",
+    "title": "사용자 의견",
     "description": "개발자와 크리에이터가 랜딩 페이지 템플릿에 대해 어떻게 생각하는지 알아보세요.",
     "quoteOne": "HorizonWing은 믿을 수 없을 정도로 잘 구성되어 있습니다. 코드는 깨끗하고 문서는 훌륭합니다.",
     "authorOne": "알렉스 첸",
